--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,13 @@
-.title{
-  background-color: black;
+#title {
+  background-color: #ff4c68;
+}
+
+.container-fluid{
+padding: 3% 20%;
+}
+
+h1 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 3rem;
+  line-height: 1.5;
 }
