--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,11 @@
+
+body{
+ font-style: "Montserrat";
+}
+
 #title {
   background-color: #ff4c68;
+  color: #ffffff;
 }
 
 .container-fluid{
@@ -8,6 +14,69 @@ padding: 3% 20%;
 
 h1 {
   font-family: 'Montserrat', sans-serif;
-  font-size: 3rem;
+  font-size: 3.5rem;
   line-height: 1.5;
+}
+
+h3{
+  font-family: "Montserrat";
+}
+
+p{
+  color: #8F8F8F;
+}
+
+/* Navigation Bar*/
+
+.navbar{
+  padding: 0 0 4.5rem;
+}
+
+.navbar-brand {
+  font-family: "Ubuntu";
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+.nav-item {
+  padding: 0 18px;
+}
+
+.nav-link {
+  font-size: 1.2rem;
+  font-family: "Montserrat-Light";
+}
+
+/* Download-Buttons */
+
+.download-button{
+  margin: 5% 3% 5% 0;
+}
+
+/* Title Image */
+
+.title-image{
+  width: 60%;
+  transform: rotate(30deg);
+}
+
+/* Features Section */
+/* "#" is used because it's an ID */
+
+#features {
+  padding: 7% 15%;
+}
+
+.feature-box{
+  text-align: center;
+  padding: 4.5%;
+}
+
+.icon{
+  color: #ef8172;
+  margin-bottom: 1rem; 
+}
+
+.icon:hover{
+  color: #ff4c68;
 }
