--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,12 @@ h1 {
   line-height: 1.5;
 }
 
+h2{
+  font-family: 'Montserrat';
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
 h3{
   font-family: "Montserrat";
 }
@@ -79,4 +85,33 @@ p{
 
 .icon:hover{
   color: #ff4c68;
+}
+
+/* Testimonials Section */
+
+#testimonials {
+  text-align: center;
+  background-color: #ef8172;
+  color: #ffffff;
+}
+
+.testimonial-image{
+ width: 10%;
+ border-radius: 100%;
+ margin: 20px;
+}
+
+.carousel-item{
+  padding: 7% 15%;
+}
+
+#press{
+  background-color: #ef8172;
+  text-align: center;
+  padding-bottom: 3%;
+}
+
+.press-logo{
+  width: 15%;
+  margin: 20px;
 }
