--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ body{
 }
 
 .container-fluid{
-padding: 3% 20%;
+padding: 3% 20% 7%;
 }
 
 h1 {
@@ -64,6 +64,20 @@ p{
 .title-image{
   width: 60%;
   transform: rotate(30deg);
+  position: absolute;
+  right: 30%;
+}
+
+@media (max-width: 1028px){
+
+  #title{
+    text-align: center;
+  }
+
+  .title-image{
+    position: static;
+    transform: rotate(0);
+  }
 }
 
 /* Features Section */
@@ -71,6 +85,9 @@ p{
 
 #features {
   padding: 7% 15%;
+  background-color: #ffffff;
+  position: relative;
+  z-index: 1;
 }
 
 .feature-box{
