--- a/css/styles.css
+++ b/css/styles.css
@@ -17,19 +17,30 @@ body{
   line-height: 1.5;
 }
 
-/* Containers */
-
-.container-fluid{
-  padding: 7% 15%;
-}
-  
-
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Montserrat';
 }
 
 p{
   color: #8f8f8f;
+}
+
+
+/* Containers */
+
+.container-fluid{
+  padding: 7% 15%;
+}
+
+/* Sections */
+
+.colored-section{
+  background-color: #ff4c68;
+  color: #ffffff;
+}
+
+.white-section{
+  background-color: #ffffff;
 }
 
 /* Navigation Bar*/
@@ -61,14 +72,9 @@ p{
 
 /* Title-Section*/
 
-#title {
-  background-color: #ff4c68;
-  color: #ffffff;
-  text-align: left;
-}
-
 #title .container-fluid {
-  padding: 3% 15% 7%;
+  padding: 3% 15%;
+  text-align: left;
 }
 
 /* Title Image */
@@ -83,7 +89,6 @@ p{
 /* Features Section */
 
 #features {
-  background-color: #ffffff;
   position: relative;
   z-index: 1;
 }
@@ -109,7 +114,6 @@ p{
 
 #testimonials {
   background-color: #ef8172;
-  color: #ffffff;
 }
 
 .testimoneials-text{
@@ -149,11 +153,6 @@ p{
 }
 
 /*CTA Section */
-
-#cta{
- background-color: #ff4c68;
- color: #ffffff;
-}
 
 /*Footer Section*/
 
